Moved babel config into package.json

--- a/package.json
+++ b/package.json
@@ -103,5 +103,12 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "babel": {
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-object-rest-spread"
+    ]
   }
 }
