--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "7.6.0",
     "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "7.6.0",
     "@babel/preset-env": "7.6.0",
     "@babel/preset-react": "7.0.0",
     "@cypress/webpack-preprocessor": "4.1.0",
@@ -52,6 +53,7 @@
     "documentation": "12.1.2",
     "eslint": "6.3.0",
     "eslint-config-recommended": "4.0.0",
+    "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-cypress": "2.6.1",
     "eslint-plugin-jest": "22.17.0",
     "eslint-plugin-prettier": "3.1.0",
