--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-d3-graph",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "React component to build interactive and configurable graphs with d3 effortlessly",
   "author": "Daniel Caldas",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --content-base sandbox --config webpack.config.js --inline --hot --port 3002",
     "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
     "dist:sandbox": "webpack --config webpack.config.js -p",
-    "dist:transpile": "./node_modules/babel-cli/bin/babel.js -d lib src",
+    "dist:transpile": "./node_modules/@babel/cli/bin/babel.js -d lib src",
     "dist": "npm run check && npm-run-all --parallel dist:*",
     "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
     "docs:watch": "node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
@@ -39,6 +39,7 @@
     "react": "^16.4.1"
   },
   "devDependencies": {
+    "@babel/cli": "7.6.0",
     "@babel/core": "7.6.0",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-optional-chaining": "7.6.0",
