--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "http-server": "0.11.1",
     "husky": "3.0.5",
     "jest": "24.9.0",
+    "jsdoc": "^3.6.3",
     "lint-staged": "9.2.5",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
@@ -106,5 +107,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "react-tooltip": "^3.11.1"
   }
 }
