--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "check:light": "npm run lint && npm run test",
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --content-base sandbox --config webpack.config.js --inline --hot --port 3002",
     "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
-    "dist:sandbox": "webpack --config webpack.config.js -p",
+    "dist:sandbox": "npm run generate:tooltips && webpack --config webpack.config.js -p",
     "dist:transpile": "./node_modules/@babel/cli/bin/babel.js -d lib src",
     "dist": "npm run check && npm-run-all --parallel dist:*",
     "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
