--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --content-base sandbox --config webpack.config.js --inline --hot --port 3002",
     "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
     "dist:sandbox": "npm run generate:tooltips && webpack --config webpack.config.js -p",
-    "dist:transpile": "./node_modules/@babel/cli/bin/babel.js -d lib src",
+    "dist:transpile": "babel -d lib src",
     "dist": "npm run check && npm-run-all --parallel dist:*",
-    "docs:lint": "node_modules/documentation/bin/documentation.js lint src/**/*.js",
-    "docs:watch": "node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
-    "docs": "npm run docs:lint && node_modules/documentation/bin/documentation.js --config documentation.yml build src/**/*.js -f html -o gen-docs && node_modules/documentation/bin/documentation.js build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
-    "functional:local": "export CYPRESS_SANDBOX_URL=http://localhost:3002 && cypress open",
-    "functional:remote": "export CYPRESS_SANDBOX_URL=https://danielcaldas.github.io/react-d3-graph/sandbox/index.html && cypress open",
-    "functional": "export CYPRESS_SANDBOX_URL=http://127.0.0.1:8888 && cypress run",
-    "generate:tooltips": "./node_modules/.bin/jsdoc -X ./src/components/graph/graph.config.js > ./tools/graph-config-jsdoc.json && cd tools && node tooltips-docs-generator.js > ../sandbox/graph-config-tooltips.js",
-    "lint:fix": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js --fix \"src/**/*.js*\" \"sandbox/**/*.js*\"",
-    "lint:src": "node_modules/eslint/bin/eslint.js --config=.eslintrc.js \"src/**/*.js*\" \"sandbox/**/*.js*\"",
-    "lint:test": "node_modules/eslint/bin/eslint.js --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
+    "docs:lint": "documentation lint src/**/*.js",
+    "docs:watch": "documentation --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
+    "docs": "npm run docs:lint && documentation --config documentation.yml build src/**/*.js -f html -o gen-docs && documentation build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
+    "functional:local": "cross-env CYPRESS_SANDBOX_URL=\"http://localhost:3002\" && cypress open",
+    "functional:remote": "cross-env CYPRESS_SANDBOX_URL=\"https://danielcaldas.github.io/react-d3-graph/sandbox/index.html\" cypress open",
+    "functional": "cross-env CYPRESS_SANDBOX_URL=\"http://127.0.0.1:8888\" cypress run",
+    "generate:tooltips": "jsdoc -X ./src/components/graph/graph.config.js > ./tools/graph-config-jsdoc.json && cd tools && node tooltips-docs-generator.js > ../sandbox/graph-config-tooltips.js",
+    "lint:fix": "eslint --config=.eslintrc.js --fix \"src/**/*.js*\" \"sandbox/**/*.js*\"",
+    "lint:src": "eslint --config=.eslintrc.js \"src/**/*.js*\" \"sandbox/**/*.js*\"",
+    "lint:test": "eslint --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
     "lint": "npm run lint:src && npm run lint:test && npm run docs:lint",
     "start": "http-server ./sandbox/ -p 8888 -c-1",
     "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --config jest.config.js",
