--- a/.editorconfig
+++ b/.editorconfig
@@ -5,16 +5,12 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{js}]
+[*.{js,jsx,json}]
 charset = utf-8
 
-[*.js]
+[*.{js,jsx,json}]
 indent_style = space
-indent_size = 4
+indent_size = 2
 
 [Makefile]
 indent_style = tab
-
-[{package.json,package-lock.json}]
-indent_style = space
-indent_size = 4
