--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x]
+        react-version: [15.x, latest, next]
 
     steps:
     - uses: actions/checkout@v2
@@ -25,6 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
+    - run: npm install react@${{ matrix.react-version }}
     - run: npm run dist:sandbox
     - run: npm start -- --silent &
     - run: npm run lint
