--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,8 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x]
-        react-version: [latest, next]
-        d3-version: [5.x, latest]
+        react-version: [16.14.0, latest]
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +27,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm install react@${{ matrix.react-version }}
-    - run: npm install d3@${{ matrix.d3-version }}
     - run: npm run dist:sandbox
     - run: npm start -- --silent &
     - run: npm run lint
