--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "dist:rd3g": "rm -rf dist/ && webpack --config webpack.config.dist.js -p --display-modules --optimize-minimize",
     "dist:sandbox": "npm run generate:tooltips && webpack --config webpack.config.js -p",
     "dist:transpile": "babel -d lib src",
-    "dist": "npm run check && npm-run-all --parallel dist:*",
+    "dist:docs": "documentation --config documentation.yml build src/**/*.js -f html -o gen-docs && documentation build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
+    "dist": "npm run check && npm-run-all --parallel dist:* && npm run wrapup:dist",
+    "wrapup:dist": "mv docs/index.html \"docs/$VERSION_PREV.html\" && mv gen-docs/index.html docs/ && mv gen-docs/DOCUMENTATION.md docs/",
     "docs:lint": "documentation lint src/**/*.js",
     "docs:watch": "documentation --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
-    "docs": "npm run docs:lint && documentation --config documentation.yml build src/**/*.js -f html -o gen-docs && documentation build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
     "functional:local": "cross-env CYPRESS_SANDBOX_URL=\"http://localhost:3002\" cypress open",
     "functional:remote": "cross-env CYPRESS_SANDBOX_URL=\"https://danielcaldas.github.io/react-d3-graph/sandbox/index.html\" cypress open",
     "functional": "cross-env CYPRESS_SANDBOX_URL=\"http://127.0.0.1:8888\" cypress run",
