--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-d3-graph",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "description": "React component to build interactive and configurable graphs with d3 effortlessly",
   "author": "Daniel Caldas",
   "license": "MIT",
@@ -12,8 +12,8 @@
     "dist:sandbox": "npm run generate:tooltips && webpack --config webpack.config.js -p",
     "dist:transpile": "babel -d lib src",
     "dist:docs": "documentation --config documentation.yml build src/**/*.js -f html -o gen-docs && documentation build src/**/*.js -f md > gen-docs/DOCUMENTATION.md",
-    "dist": "npm run check && npm-run-all --parallel dist:* && npm run wrapup:dist",
-    "wrapup:dist": "github_changelog_generator since-tag=$VERSION_PREV -u $GITHUB_USERNAME && mv docs/index.html \"docs/$VERSION_PREV.html\" && mv gen-docs/index.html docs/ && mv gen-docs/DOCUMENTATION.md docs/",
+    "dist": "npm install && npm run check && npm-run-all --parallel dist:* && npm run wrapup:dist",
+    "wrapup:dist": "github_changelog_generator --user $GITHUB_USERNAME && mv docs/index.html \"docs/$VERSION_PREV.html\" && mv gen-docs/index.html docs/ && mv gen-docs/DOCUMENTATION.md docs/",
     "docs:lint": "documentation lint src/**/*.js",
     "docs:watch": "documentation --config documentation.yml build src/**/*.js -f html -o gen-docs --watch",
     "functional:local": "cross-env CYPRESS_SANDBOX_URL=\"http://localhost:3002\" cypress open",
