--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest": "24.9.0",
     "jsdoc": "^3.6.3",
     "lint-staged": "9.2.5",
+    "lz-string": "^1.4.4",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "query-string": "6.8.3",
