remove uncessary changes

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "lint:test": "eslint --config=.eslintrc.test.config.js \"test/**/*.spec.js\"",
     "lint": "npm run lint:src && npm run lint:test && npm run docs:lint",
     "start": "http-server ./sandbox/ -p 8888 -c-1",
-    "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --config jest.config.js",
-    "test:watch": "jest --verbose --coverage --watchAll --config jest.config.js",
-    "test": "jest --verbose --coverage --env=jsdom --config=jest.config.js",
+    "test:clean": "jest --no-cache --updateSnapshot --verbose --coverage --env jsdom --config jest.config.js",
+    "test:watch": "jest --verbose --coverage --watchAll --env jsdom --config jest.config.js",
+    "test": "jest --verbose --coverage --env jsdom --config jest.config.js",
     "sandbox": "npm run dist:sandbox && npm run start",
     "prettier": "prettier --write test/**/*"
   },
