--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "peerDependencies": {
     "d3": "^5.5.0",
-    "react": "^16.4.1"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "7.6.0",
@@ -64,7 +64,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-standard": "4.0.1",
-    "html-webpack-plugin": "2.30.1",
+    "html-webpack-plugin": "^4.0.0",
     "http-server": "^0.12.1",
     "husky": "3.0.5",
     "jest": "24.9.0",
@@ -74,9 +74,9 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "query-string": "6.8.3",
-    "react": "^16.4.1",
+    "react": "^17.0.2",
     "react-addons-test-utils": "15.6.2",
-    "react-dom": "^16.4.2",
+    "react-dom": "17.0.0",
     "react-editable-json-tree": "2.2.1",
     "react-jsonschema-form": "1.0.4",
     "react-test-renderer": "16.9.0",
@@ -84,7 +84,7 @@
     "react-tooltip": "3.11.6",
     "style-loader": "0.18.2",
     "typescript": "3.8.3",
-    "webpack": "4.41.6",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "3.3.8",
     "webpack-dev-server": "^3.1.14",
@@ -115,3 +115,4 @@
     }
   }
 }
+
